# syncfiles

./: .bazelrc  .clang-format  .gitignore  .header  404.html  Formats.md  Makefile  README.md  SyncFiles CW4.mcp  WORKSPACE  convert.c  convert.h  convert_line_endings.c  convert_test.c  copy.c  copymac.py  defs.h  feed.xml  file.c  index.html  mac_from_unix.c  mac_from_unix_data.h  mac_to_unix.c  sync.c  test.sh  util.c
assets/css/: just-the-docs-dark.css.map  just-the-docs-default.css.map  just-the-docs-light.css.map
assets/js/: just-the-docs.js  search-data.json
bazel/: copts.bzl
charmap/: BUILD.bazel
convert/: .gitignore  BUILD.bazel  convert.c  convert.h  convert_1f.c  convert_1r.c  convert_test.c  data.h  defs.h  resources.h  test.h  toolbox.c
docs/: Gemfile  _config.yml  index.md  push.sh
docs/tech/: apis.md  archive-formats.md  filesystems.md  finder-info.md  index.md  resource-forks.md  safe-saving.md
lib/: BUILD.bazel  crc32.c  crc32.h  crc32_test.c  defs.h  endian.h  endian_test.c  error.h  strbuf.c  strbuf.h  strbuf_test.c  test.c  test.h  toolbox.c  util.c  util.h
macos/: BUILD.bazel  choose_directory.c  choose_directory.h  derez.sh  error.c  error.h  icons.r  main.c  main.h  menu.r  path.c  path.h  project.c  project.h  pstrbuilder.c  pstrbuilder.h  pstrbuilder_test.c  resources.h  resources.r  strutil.c  strutil.h  tempfile.c  tempfile.h
scripts/: BUILD.bazel  README.md  charmap.csv  encoding.csv  extract.py  region.csv  script.csv
src/: .gitignore  BUILD.bazel  README.md  convert.c  convert.h  convert_1f.c  convert_1r.c  convert_test.c  test.h  toolbox.c
sync/: BUILD.bazel  meta.h  tree.c  tree.h  tree_test.c
syncfiles.xcodeproj/: project.pbxproj
tech/: apis.html  archive-formats.html  filesystems.html  finder-info.html  index.html  resource-forks.html  safe-saving.html
