filegroup(
    name = "data",
    srcs = [
        "ARABIC.TXT",
        "CELTIC.TXT",
        "CENTEURO.TXT",
        "CHINSIMP.TXT",
        "CHINTRAD.TXT",
        "CORPCHAR.TXT",
        "CROATIAN.TXT",
        "CYRILLIC.TXT",
        "DEVANAGA.TXT",
        "DINGBATS.TXT",
        "FARSI.TXT",
        "GAELIC.TXT",
        "GREEK.TXT",
        "GUJARATI.TXT",
        "GURMUKHI.TXT",
        "HEBREW.TXT",
        "ICELAND.TXT",
        "INUIT.TXT",
        "JAPANESE.TXT",
        "KEYBOARD.TXT",
        "KOREAN.TXT",
        "ROMAN.TXT",
        "ROMANIAN.TXT",
        "SYMBOL.TXT",
        "THAI.TXT",
        "TURKISH.TXT",
        "UKRAINE.TXT",
    ],
    visibility = ["//visibility:public"],
)
