load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "COPTS")

genrule(
    name = "data",
    srcs = [
        "//charmap:data",
        "//scripts:data",
    ],
    outs = [
        "charmap_data.c",
        "charmap_info.c",
        "charmap_region.c",
        "charmap.r",
    ],
    cmd = "$(execpath //gen:macscript) -dest=$(RULEDIR) -src=. -quiet -format=false",
    tools = [
        "//gen:macscript",
    ],
)

cc_library(
    name = "convert",
    srcs = [
        "charmap_data.c",
        "charmap_info.c",
        "charmap_region.c",
        "convert.c",
        "convert_1f.c",
        "convert_1r.c",
        "toolbox.c",
    ],
    hdrs = [
        "convert.h",
        "data.h",
        "defs.h",
        "test.h",
    ],
    copts = COPTS,
)

cc_test(
    name = "convert_test",
    srcs = [
        "convert_test.c",
    ],
    copts = COPTS,
    deps = [
        ":convert",
    ],
)
