load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "COPTS")

cc_library(
    name = "lib",
    srcs = [
        "toolbox.c",
    ],
    hdrs = [
        "defs.h",
        "endian.h",
        "test.h",
    ],
    copts = COPTS,
    visibility = ["//visibility:public"],
)

cc_test(
    name = "endian_test",
    srcs = [
        "endian_test.c",
    ],
    copts = COPTS,
    deps = [
        ":lib",
    ],
)
