load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "COPTS")

cc_library(
    name = "lib",
    srcs = [
        "toolbox.c",
        "util.c",
    ],
    hdrs = [
        "defs.h",
        "endian.h",
        "util.h",
    ],
    copts = COPTS,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "test",
    testonly = True,
    srcs = [
        "test.c",
    ],
    hdrs = [
        "test.h",
    ],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":lib",
    ],
)

cc_test(
    name = "endian_test",
    size = "small",
    srcs = [
        "endian_test.c",
    ],
    copts = COPTS,
    deps = [
        ":lib",
        ":test",
    ],
)
